Update README.md and description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "xml-pulley",
   "version": "0.2.0",
-  "description": "A sort of reverse-SAX XML parser",
+  "description": "a sort of reverse-SAX XML parser",
   "main": "lib/xml-pulley.js",
   "jsnext:main": "src/xml-pulley.js",
   "scripts": {
