--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,5 @@ node_js:
 before_script:
   - npm install -g gulp
 script: gulp && npm test
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
