Made tests run with a sourcemap for code coverage purposes

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ node_js:
   - '6'
 before_script:
   - npm install -g gulp
-script: gulp && npm test
+script: gulp with-sourcemap && npm test
 after_success:
   - npm run coverage
