--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "sax": "^1.2.1"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-es2015-loose": "^7.0.0",
     "chai": "^3.3.0",
     "codecov": "^1.0.1",
     "gulp": "^3.9.0",
-    "gulp-babel": "^5.2.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-sourcemaps": "^1.6.0",
     "mocha": "^2.3.3",
     "nyc": "^6.4.4"
   }
